Fix White Space In Mobile

--- a/style.css
+++ b/style.css
@@ -720,9 +720,14 @@ footer{
 
 
 /******************** Responsive ********************/
-@media only screen and (max-width: 600px) {
-
-
+@media only screen and (max-width: 800px) {
+    @media only screen and (max-width: 768px){
+        html,
+        body{
+        width:100%;
+        overflow-x:hidden;
+        }
+    }
 
     /******************** Responsive  Heeader ********************/
     .header{
